# pico-modbus

./: Dockerfile  README.md  modbus.py  pico-gpio.py  pico-pcf8523.py  pico-uart.py  requirements.txt
.devcontainer/: devcontainer.json
project/: CMakeLists.txt  openocd.cfg
project/inc/: callback.h  gpios.h  modbus.h  panduza.h  pico_tusb_config.h  platform.h  rtc.h
project/modbus/: modbus.c  modbusDevice.c
project/modbus/inc/modbus/: modbusDevice.h
project/panduza-adapters-sdk/: CMakeLists.txt  panduza_sdk_init.cmake
project/panduza-adapters-sdk/connecteurs/: CMakeLists.txt
project/panduza-adapters-sdk/connecteurs/pico/: dio.c  modbus.c  platform.c  platform.cmake
project/panduza-adapters-sdk/connecteurs/pico/inc/connecteurs/: dio.h  modbus.h  platform.h
project/panduza-adapters-sdk/drivers/: CMakeLists.txt
project/panduza-adapters-sdk/drivers/panduza_dio/: CMakeLists.txt  dio.c
project/panduza-adapters-sdk/drivers/panduza_dio/inc/panduza/: dio.h
project/panduza-adapters-sdk/drivers/panduza_uart/: uart.c
project/panduza-adapters-sdk/drivers/panduza_uart/inc/panduza/: uart.h
project/panduza-adapters-sdk/interfaces/: CMakeLists.txt
project/panduza-adapters-sdk/interfaces/modbus/: CMakeLists.txt
project/panduza-adapters-sdk/interfaces/modbus/inc/modbus/: modbus.h  modbusDevice.h
project/panduza-adapters-sdk/platform/: CMakeLists.txt
project/panduza-adapters-sdk/platform/pico/: CMakeLists.txt  platform.cmake
project/panduza_dio/: CMakeLists.txt  panduza_dio.c
project/panduza_dio/inc/panduza/: dio.h
project/src/: gpios.c  main.c  modbus.c  platform.c  rtc.c
